# jarvis

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO_USER.md  pyproject.toml
hud-overlay/: Info.plist  Package.swift  README.md  build.sh  com.swxvno.jarvis.hud.plist
hud-overlay/.build/: build.db  release.yaml
hud-overlay/.build/arm64-apple-macosx/release/: JarvisHUD  description.json
hud-overlay/.build/arm64-apple-macosx/release/JarvisHUD.build/: JarvisHUD.d  output-file-map.json  sources
hud-overlay/.build/arm64-apple-macosx/release/JarvisHUD.dSYM/Contents/: Info.plist
hud-overlay/.build/arm64-apple-macosx/release/JarvisHUD.product/: Objects.LinkFileList
hud-overlay/.build/arm64-apple-macosx/release/Modules/: JarvisHUD.swiftdoc  JarvisHUD.swiftmodule  JarvisHUD.swiftsourceinfo
hud-overlay/JarvisHUD.app/Contents/MacOS/: JarvisHUD
hud-overlay/Sources/JarvisHUD/: main.swift
hud/jarvis-hud.widget/: index.jsx
scripts/: hud-data.sh
src/jarvis/: __init__.py  __main__.py  agent.py  assistant.py  cli.py  config.py  daemon.py  health_server.py  history.py  hud.py  persona.py  plugins.py  user_config.py
src/jarvis/tools/: __init__.py  applescript.py  coding.py  converters.py  dev.py  fileops.py  fs.py  generators.py  macos.py  macos_extra.py  macos_extras2.py  macos_more.py  network.py  registry.py  shell.py  utils.py  web.py
src/jarvis/voice/: __init__.py  recorder.py  transcribe.py  wake.py
tests/: test_daemon.py  test_dev_plugins_config.py  test_extras.py  test_smoke.py  test_tools.py  test_voice.py  test_wake.py
(+70 files in other folders)
